Fixes scroll bar showing on smaller devices

--- a/styles/ascii-photo.scss
+++ b/styles/ascii-photo.scss
@@ -4,5 +4,6 @@
         line-height: 100%;
         text-align: center;
         margin: 0;
+        overflow: hidden;
     }
 }
